Modernize: stream.toList() sweep + @Transactional class-level on read-heavy service impls.
* Replaced `.collect(Collectors.toList())` with the Java 16+
  `Stream.toList()` form across the codebase (17 files) and pruned 15
  now-unused `import java.util.stream.Collectors;` declarations. The
  source level is already 17 on spring7. The new form returns an
  unmodifiable list which matches how the returned lists are used here
  (DTO conversion paths that are forwarded to REST serialization).
* Extended the @Transactional(readOnly=true) class-level pattern from
  ResourceServiceImpl to UserServiceImpl, UserGroupServiceImpl,
  CategoryServiceImpl, IPRangeServiceImpl and StoredDataServiceImpl. Each
  write method (insert / update / delete / updateAttributes /
  assignUserGroup / deassignUserGroup / updateSecurityRules /
  insertSpecial* / removeSpecial*) is overridden with a non-readOnly
  @Transactional so write semantics are preserved.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>